src/dialog/styles.scss
@import "../mixins/shadow";
@import "../typography";
@import "../variables";
@import "./variables";

.dialogContainer {
  display: flex;
  align-items: flex-end;
  justify-content: center;
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  background-color: rgba($shadowColor, .5);
  z-index: 2;

  &:empty {
    display: none;
  }

  @media (min-width: $container_maxWidth) {
    align-items: center;
    padding: $container_padding;
  }
}

.dialog {
  @include shadow(24);
  background-color: $theme_backgroundColor;
  width: 100%;
  max-width: $dialog_maxWidth;
  border-top-left-radius: $container_borderRadius;
  border-top-right-radius: $container_borderRadius;
  max-height: calc(100vh - #{$container_verticalMargin * 2});
  display: flex;
  flex-direction: column;
  overflow: hidden;

  @media (min-width: $container_maxWidth) {
    border-radius: $container_borderRadius;
  }

  &_content {
    padding: $container_padding;
    padding-bottom: 0;
    flex-grow: 1;
    overflow-y: auto;
  }

  &_title.heading { // so it's higher than just .heading
    @extend %heading-5;
  }

  &_buttons {
    flex-shrink: 0;
    padding: $dialogButtons_padding;
    flex-direction: row-reverse;

    .button {
      background-color: transparent;
      color: $theme_accentColor;
      box-shadow: none !important;
      margin-bottom: 0;

      &:not(:first-child) {
        margin-right: $dialogButtons_padding;
      }

      &:first-child {
        margin-right: 0;
      }

      &.-dangerous {
        color: $theme_errorColor;
      }
    }
  }
}

